IFS-2533 Validation updates

--- a/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/grant-offer-letter-send.html
+++ b/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/grant-offer-letter-send.html
@@ -151,6 +151,8 @@
                                    id="gol-reject-reason"
                                    name="GOLRejectReason"
                                    required="required"
+                                   maxlength="128"
+                                   data-maxlength-errormessage="Your rejection reason cannot have more than 128 characters."
                                    data-switches-button-status="#submit-button"/>
                         </div>
                     </div>
