--- a/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/grant-offer-letter-send.html
+++ b/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/grant-offer-letter-send.html
@@ -122,20 +122,27 @@
                         Please confirm that these documents meet the requirements for the grant offer letter.
                     </legend>
                     <div class="multiple-choice">
-                        <input id="acceptGOL" value="APPROVED" type="radio" name="approvalType" required="required"
+                        <input id="acceptGOL"
+                               value="APPROVED"
+                               type="radio"
+                               name="approvalType"
+                               required="required"
                                data-switches-button-status="#submit-button"
                                data-switches-modal-target="#submit-button"
                                data-switches-modal-target-value="modal-accept-signed-gol"
-                               />
+                        />
                         <label for="acceptGOL">
                             Accept documents
                         </label>
                     </div>
                     <div class="multiple-choice" data-target="reject-gol">
-                        <input id="rejectGOL" value="REJECTED" type="radio" name="approvalType" required="required"
+                        <input id="rejectGOL"
+                               value="REJECTED"
+                               type="radio"
+                               name="approvalType"
+                               required="required"
                                data-switches-modal-target="#submit-button"
                                data-switches-modal-target-value="modal-reject-signed-gol"
-
                         />
                         <label for="rejectGOL">
                             Reject documents
@@ -152,8 +159,9 @@
                                    name="GOLRejectReason"
                                    required="required"
                                    maxlength="128"
-                                   data-maxlength-errormessage="Your rejection reason cannot have more than 128 characters."
-                                   data-switches-button-status="#submit-button"/>
+                                   data-switches-button-status="#submit-button"
+                                   th:attr="data-maxlength-errormessage=#{validation.rejection.gol.reason.has.too.many.characters}"
+                            />
                         </div>
                     </div>
                 </fieldset>
