IFS-2928 fixed create competition

--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/fragments/competition-setup-section-assessors.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/fragments/competition-setup-section-assessors.html
@@ -125,6 +125,7 @@
                         <input id="financeView-0"
                                type="radio"
                                th:field="${competitionSetupForm.financeView}"
+                               th:checked="${competitionSetupForm.financeView == 'OVERVIEW'}"
                                value="OVERVIEW"
                                th:errorclass="field-error"
                                required="required"
