--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/question-type/form-elements.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/question-type/form-elements.html
@@ -56,6 +56,9 @@
 
             <h4 class="heading-small no-margin">Accepted appendix file types</h4>
 
+            <!--/*
+            TODO: IFS-2564 - Change to use 'allowedFileTypes' instead of 'allowedFileTypesSet' in ZDD migrate
+            */-->
             <ul>
                 <li th:text="${allowedFileType.getDisplayName()}" th:each="allowedFileType : ${guidable.allowedFileTypesSet}">
                     PDF
