--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/fragments/competition-setup-section-assessors.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/fragments/competition-setup-section-assessors.html
@@ -114,35 +114,35 @@
                     </div>
                 </fieldset>
             </div>
-            <div class="form-group" th:classappend="${#fields.hasErrors('financeView')} ? 'form-group-error'">
+            <div class="form-group" th:classappend="${#fields.hasErrors('assessorFinanceView')} ? 'form-group-error'">
                     <legend class="heading-small">
                         Assessor view of finances
-                        <th:block th:if="${#fields.hasErrors('financeView')}">
-                            <span class="error-message" th:each="err : ${#fields.errors('financeView')}" th:text="${err}" />
+                        <th:block th:if="${#fields.hasErrors('assessorFinanceView')}">
+                            <span class="error-message" th:each="err : ${#fields.errors('assessorFinanceView')}" th:text="${err}" />
                         </th:block>
                     </legend>
                     <div class="multiple-choice">
-                        <input id="financeView-0"
+                        <input id="assessorFinanceView-0"
                                type="radio"
-                               th:field="${competitionSetupForm.financeView}"
-                               th:checked="${competitionSetupForm.financeView == 'OVERVIEW'}"
+                               th:field="${competitionSetupForm.assessorFinanceView}"
+                               th:checked="${competitionSetupForm.assessorFinanceView == 'OVERVIEW'}"
                                value="OVERVIEW"
                                th:errorclass="field-error"
                                required="required"
-                               th:attr="data-required-errormessage=#{validation.assessorsform.financeView.required}" />
-                        <label for="financeView-0">
+                               th:attr="data-required-errormessage=#{validation.assessorsform.assessorFinanceView.required}" />
+                        <label for="assessorFinanceView-0">
                             Overview
                         </label>
                     </div>
                     <div class="multiple-choice">
-                        <input id="financeView-1"
+                        <input id="assessorFinanceView-1"
                                type="radio"
-                               th:field="${competitionSetupForm.financeView}"
+                               th:field="${competitionSetupForm.assessorFinanceView}"
                                th:errorclass="field-error"
                                required="required"
                                value="DETAILED"
-                               th:attr="data-required-errormessage=#{validation.assessorsform.financeView.required}" />
-                        <label for="financeView-1">
+                               th:attr="data-required-errormessage=#{validation.assessorsform.assessorFinanceView.required}" />
+                        <label for="assessorFinanceView-1">
                             Detailed
                         </label>
                     </div>
@@ -166,7 +166,7 @@
                 <dd th:text="${competitionSetupForm.hasInterviewStage} ? 'Yes' : 'No' "/>
 
                 <dt>Assesor view of finances?</dt>
-                <dd th:text="${#strings.capitalize(#strings.toLowerCase(competitionSetupForm.financeView))}"/>
+                <dd th:text="${#strings.capitalize(#strings.toLowerCase(competitionSetupForm.assessorFinanceView))}"/>
             </dl>
 
            <button th:unless="${model.general.state.preventEdit}" type="submit" class="button">Edit</button>
