--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/panel-find.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/panel-find.html
@@ -90,7 +90,7 @@
 
     <form method="POST"
           th:action="@{/assessment/panel/competition/{competitionId}/assessors/find/addSelected(competitionId=${model.competitionId})}"
-          th:object="${assessorPanelSelectionForm}"
+          th:object="${reviewSelectionForm}"
           data-multipage-select=""
           th:attr="data-total-checkboxes=${model.pagination.totalCount}">
 
@@ -100,18 +100,18 @@
                     <input type="checkbox"
                            data-select-all=""
                            id="select-all-check"
-                           th:checked="${assessorPanelSelectionForm.getAllSelected()}"
+                           th:checked="${reviewSelectionForm.getAllSelected()}"
                            th:disabled="${model.selectAllDisabled || model.pagination.totalCount == 0}"/>
                     <label for="select-all-check">
                         Select all assessors
                     </label>
                 </div>
                 <span class="form-hint">
-                    <span data-count-selected="" th:text="${#lists.size(assessorPanelSelectionForm.selectedIds)}"></span> assessors selected
+                    <span data-count-selected="" th:text="${#lists.size(reviewSelectionForm.selectedIds)}"></span> assessors selected
                 </span>
             </div>
             <div class="column-half select-all alignright">
-                <button class="button" name="addSelected" data-submit-el="" th:attr="disabled=${#lists.isEmpty(assessorPanelSelectionForm.selectedIds)}">
+                <button class="button" name="addSelected" data-submit-el="" th:attr="disabled=${#lists.isEmpty(reviewSelectionForm.selectedIds)}">
                     Add selected to invite list
                 </button>
             </div>
