--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/finance/finance.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/finance/finance.html
@@ -400,7 +400,7 @@
                            required="required"
                            min="1"
                            max="9999999999999999999"
-                           th:attr="data-max-errormessage=#{validation.field.max.number.of.digits(20)}"
+                           th:attr="data-field-errormessage=#{validation.field.non.decimal.format}"
                     />
                 </td>
                 <td class="numeric"
