--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/competition/manage-interview-panel.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/competition/manage-interview-panel.html
@@ -36,11 +36,11 @@
 
         <li><a th:if="${model.competitionStatus == T(org.innovateuk.ifs.competition.resource.CompetitionStatus).FUNDERS_PANEL}"
                th:href="@{/assessment/interview-panel/competition/{competitionId}/applications/find(competitionId=${model.competitionId})}">
-            Assign Applications
+            Assign applications
         </a>
             <a th:unless="${model.competitionStatus == T(org.innovateuk.ifs.competition.resource.CompetitionStatus).FUNDERS_PANEL}"
                class="disabled" aria-disabled="true" >
-                Assign Applications
+                Assign applications
             </a>
         </li>
 
@@ -49,7 +49,7 @@
         <li><p class="extra-margin">You can allocate applications to assessors once they have responded.</p></li>
 
         <li><a class="disabled" aria-disabled="true">Allocate applications to assessors</a></li>
-        
+
     </ul>
 
     <th:block th:insert="fragments/layout :: main-content-end" />
