IFS-2928 fixed not submitting form when in assessment

--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/fragments/competition-setup-section-assessors.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/fragments/competition-setup-section-assessors.html
@@ -149,6 +149,7 @@
                         </div>
                     </div>
                     <div th:unless="${!model.general.state.inAssessmentState}">
+                        <input type="hidden" th:field="${competitionSetupForm.assessorFinanceView}" value="${competitionSetupForm.assessorFinanceView}"/>
                         <span th:text="${#strings.capitalize(#strings.toLowerCase(competitionSetupForm.assessorFinanceView))}">Asssessor Finance View</span>
                     </div>
             </div>
