--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/finance/finance.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/finance/finance.html
@@ -324,6 +324,7 @@
                            placeholder="0"
                            min="1"
                            max="365"
+                           step="1"
                            required="required" />
                 </div>
                 <h3>Number of staff and roles within the project</h3>
@@ -426,6 +427,7 @@
                            required="required"
                            min="1"
                            max="999999999"
+                           step="1"
                            th:attr="data-max-errormessage=#{validation.field.max.number.of.digits(10)}"
                     />
                 </td>
@@ -688,7 +690,8 @@
                            th:id="${'cost-overheads-'+overheadCosts?.id+'-calculate'}"
                            th:value="${overheadRate.equals(T(org.innovateuk.ifs.finance.resource.cost.OverheadRateType).TOTAL)} ? ${costCategory?.total} : '0'"
                            min="0"
-                           max="999999999" />
+                           max="999999999"
+                           step="1"/>
                     <input type="hidden"
                            readonly="readonly"
                            th:id="${'section-total-'+subSection.id+'-calculate-formatted'}"
@@ -810,8 +813,8 @@
                            th:classappend="${#fields.hasErrors('${form.formInput[cost-'+ costIdentifier +'-quantity]}')} ? 'form-control-error'"
                            min="1"
                            max="999999999"
-                           required="required"
                            step="1"
+                           required="required"
                            th:attr="data-max-errormessage=#{validation.field.max.number.of.digits(10)}" />
                 </td>
                 <td class="form-group"  th:classappend="${#fields.hasErrors('${form.formInput[cost-'+ costIdentifier +'-cost]}')} ? 'form-group-error'">
@@ -828,8 +831,8 @@
                            placeholder="0"
                            min="1"
                            max="9999999999999999999"
-                           required="required"
                            step="1"
+                           required="required"
                            th:attr="data-max-errormessage=#{validation.field.max.number.of.digits(20)}" />
                 </td>
                 <td>
@@ -984,8 +987,8 @@
                             placeholder="0"
                             min="1"
                             max="999999999"
-                            required="required"
                             step="1"
+                            required="required"
                             th:attr="data-max-errormessage=#{validation.field.max.number.of.digits(10)}"
                             th:classappend="${#fields.hasErrors('${form.formInput[cost-'+ costIdentifier +'-deprecation]}')} ? 'form-control-error'"
                              />
@@ -1003,6 +1006,7 @@
                         ifs:nonZeroValue="${cost.npv}"
                         placeholder="0"
                         min="1"
+                        step="1"
                         max="9999999999999999999"
                         required="required"
 
@@ -1024,8 +1028,8 @@
                         placeholder="0"
                         min="0"
                         max="9999999999999999999"
-                        required="required"
                         step="1"
+                        required="required"
                         th:attr="data-max-errormessage=#{validation.field.max.number.of.digits(20)}"
                         th:classappend="${#fields.hasErrors('${form.formInput[cost-'+ costIdentifier +'-residualValue]}')} ? 'form-control-error'"/>
                 </div>
@@ -1043,6 +1047,7 @@
                            placeholder="0"
                            min="0"
                            max="100"
+                           step="1"
                            required="required"
                            th:classappend="${#fields.hasErrors('${form.formInput[cost-'+ costIdentifier +'-utilisation]}')} ? 'form-control-error'"/>
                 </div>
@@ -1192,6 +1197,7 @@
                            placeholder="0"
                            min="1"
                            max="9999999999999999999"
+                           step="1"
                            required="required"
                            th:attr="data-max-errormessage=#{validation.field.max.number.of.digits(20)}"
                            th:classappend="${#fields.hasErrors('${form.formInput[cost-'+ costIdentifier +'-cost]}')} ? 'form-control-error'"
@@ -1318,6 +1324,7 @@
                            placeholder="0"
                            min="1"
                            max="999999999"
+                           step="1"
                            required="required"
                            th:attr="data-max-errormessage=#{validation.field.max.number.of.digits(10)}"
                            th:classappend="${#fields.hasErrors('${form.formInput[cost-'+ costIdentifier +'-quantity]}')} ? 'form-control-error'"  />
@@ -1335,6 +1342,7 @@
                            placeholder="0"
                            min="1"
                            max="9999999999999999999"
+                           step="1"
                            required="required"
                            th:attr="data-max-errormessage=#{validation.field.max.number.of.digits(20)}"
                            th:classappend="${#fields.hasErrors('${form.formInput[cost-'+ costIdentifier +'-cost]}')} ? 'form-control-error'" />
@@ -1460,6 +1468,7 @@
                        placeholder="0"
                        min="1"
                        max="9999999999999999999"
+                       step="1"
                        required="required"
                        th:attr="data-max-errormessage=#{validation.field.max.number.of.digits(20)}"
                        th:classappend="${#fields.hasErrors('${form.formInput[cost-'+ costIdentifier +'-cost]}')} ? 'form-control-error'"  />
