IFS-2904 Front end updates

--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/dashboard/application-search.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/dashboard/application-search.html
@@ -10,10 +10,24 @@
 
 <main tabindex="-1" id="content">
     <th:block th:insert="fragments/layout :: main-content-start" />
-    <th:block th:insert="fragments/layout :: page-title" th:with="pageTitle='Search results',size='heading-large'" />
 
-    <p><th:block th:if="${model.searchStringPresent}" th:text="${model.applicationCount} + ' application(s) matching the number ' +  ${model.searchString}"/></p>
+    <form role="search" method="get" id="searchform" th:action="@{'/dashboard/application/search'}">
+        <th:block th:insert="competition/dashboard :: comp-dashboard-header (searchQuery=${searchQuery})"
+                  th:with="setPageTitle='Search results',
+                    size='heading-large',
+                    searchType='applications'"
+        />
+    </form>
 
+    <th:block th:if="${model.searchStringPresent}">
+        <p>
+            <span th:text="${model.applicationCount}" class="heading-xlarge" />
+            <strong>applications</strong>
+            matching the number
+            <strong th:text="${model.searchString}" />
+        </p>
+    </th:block>
+    
     <th:block th:insert="fragments/dashboard-application-search :: application-search(applications=${model.applications}, count=${model.applicationCount}, pagination=${model.applicationPagination})" />
 
     <th:block th:insert="fragments/layout :: main-content-end" />
