IFS-2904 Update to input name

--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/competition/dashboard.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/competition/dashboard.html
@@ -12,7 +12,7 @@
                 <label class="visuallyhidden" for="searchQuery">Search for:</label>
                 <input type="search"
                        th:value="${searchQuery}"
-                       name="searchQuery"
+                       th:name="${searchType == 'applications' ? 'searchString' : 'searchQuery'}"
                        id="searchQuery"
                        class="search-query"
                        th:placeholder="${searchType == 'applications' ? 'Search applications' : 'Search competitions'}"/>
