IFS-2856 Update to fix review panel template issue

--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/panel-find.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/panel-find.html
@@ -107,11 +107,11 @@
                     </label>
                 </div>
                 <span class="form-hint">
-                    <span data-count-selected="" th:text="${#lists.size(reviewSelectionForm.selectedIds)}"></span> assessors selected
+                    <span data-count-selected="" th:text="${#lists.size(reviewSelectionForm.selectedAssessorIds)}"></span> assessors selected
                 </span>
             </div>
             <div class="column-half select-all alignright">
-                <button class="button" name="addSelected" data-submit-el="" th:attr="disabled=${#lists.isEmpty(reviewSelectionForm.selectedIds)}">
+                <button class="button" name="addSelected" data-submit-el="" th:attr="disabled=${#lists.isEmpty(reviewSelectionForm.selectedAssessorIds)}">
                     Add selected to invite list
                 </button>
             </div>
@@ -134,7 +134,7 @@
                         <div class="multiple-choice">
                             <input type="checkbox"
                                    th:id="|assessor-row-${index.count}|"
-                                   th:field="*{selectedIds}"
+                                   th:field="*{selectedAssessorIds}"
                                    th:value="${assessor.id}"/>
                             <label th:for="|assessor-row-${index.count}|">
                                 <span class="invisible">Add</span>
