--- a/ifs-web-service/ifs-web-core/src/main/resources/static/sass/components/_list-overview.scss
+++ b/ifs-web-service/ifs-web-core/src/main/resources/static/sass/components/_list-overview.scss
@@ -43,6 +43,7 @@
 .eligibility {
   border: 1px solid $border-colour;
   padding: 20px 20px 10px 20px;
+  margin-top: 20px;
 
   &.warning {
     border: 1px solid $red;
