IFS-523 Add type to button to stop it submitting the page

--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/fragments/competition-setup-section-additional.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/fragments/competition-setup-section-additional.html
@@ -81,7 +81,7 @@
 
                     <div class="alignright">
                         <input type="hidden" name="removeFunder" />
-                        <button class="buttonlink" name="add-cofunder" data-add-row="cofunder">+Add co-funder</button>
+                        <button class="buttonlink" name="add-cofunder" data-add-row="cofunder" type="button">+Add co-funder</button>
                     </div>
                 </div>
             </div>
