IFS-482 Change vertical alignment of tables with form elements

--- a/ifs-web-service/ifs-web-core/src/main/resources/static/sass/components/_forms.scss
+++ b/ifs-web-service/ifs-web-core/src/main/resources/static/sass/components/_forms.scss
@@ -81,6 +81,7 @@ tr {
     float:none;
     width:auto;
     padding-left:0;
+    vertical-align: bottom;
 
     input {
       vertical-align: top;
