IFS-2998 Replace template string

--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/question-type/form-elements.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/question-type/form-elements.html
@@ -60,7 +60,10 @@
             TODO: IFS-2564 - Change to use 'allowedFileTypes' instead of 'allowedFileTypesSet' in ZDD migrate
             */-->
             <ul>
-                <li th:text="${allowedFileType.getDisplayName()}" th:each="allowedFileType : ${formInput.allowedFileTypesSet}">
+                <!-- /*
+                TODO: IFS-2959 - Remove the strings.replace
+                */-->
+                <li th:text="${#strings.replace(allowedFileType.getDisplayName(),'Spreadsheet','spreadsheet')}" th:each="allowedFileType : ${formInput.allowedFileTypesSet}">
                     PDF
                 </li>
             </ul>
